@@ -1,5 +1,16 @@
 2019-05-21  Segher Boessenkool  <segher@kernel.crashing.org>
 
+	* config/rs6000/constraints.md (define_register_constraint "wl"):
+	Delete.
+	* config/rs6000/rs6000.h (enum r6000_reg_class_enum): Delete
+	RS6000_CONSTRAINT_wl.
+	* config/rs6000/rs6000.c (rs6000_debug_reg_global): Adjust.
+	(rs6000_init_hard_regno_mode_ok): Adjust.
+	* config/rs6000/rs6000.md: Replace "wl" constraint by "d" with "p6".
+	* doc/md.texi (Machine Constraints): Adjust.
+
+2019-05-21  Segher Boessenkool  <segher@kernel.crashing.org>
+
 	* config/rs6000/constraints.md (define_register_constraint "wm"):
 	Delete.
 	* config/rs6000/rs6000.h (enum r6000_reg_class_enum): Delete
